--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <footer>
 <hr>
-<code>copyright 2020 abdur raheem </code>
+<code>copyright (c) 2020 Abdur Raheem </code>
   </footer>
 
 </html>
